慕课网的"京东首页"还提到了一个工具"browser-sync"

--- a/_posts/2020-07-25-最近两月学习总结.md
+++ b/_posts/2020-07-25-最近两月学习总结.md
@@ -19,6 +19,7 @@ title: 总结一下这两个月的学习内容
 + 还试着学习了一下`vue`的`ssr`以及`nuxt`技术, 项目也很简单, 一个是163的公开课, 讲的比较基础, 还提到了怎么解决`sass`的一个bug, 但是不知道什么原因(网络的问题吗?), 里面的一个教学demo, `vue-hackernews-2.0`根本打不开, 另外一个演示demo又太简单, `vuex`以及`vue-router`完全没有涉及到; 还有一个是51cto的, 也是比较基础, 提到了一些`vuex`和生命周期的钩子, 还有`config`, 但是也比较简单, 里面提到了一个工具`json-server`;
 + 觉得`ssr`真的很难, 还有看文档的时候, 觉得`vue-cli`因为涉及到了较多的`webpack`, 也比较难, 这些都需要去加强学习;
 + 此外, 还有一些零碎的学习, 包括慕课网的`css`相关教程还有自己看的一些`sass`, `typescript`方面的教程. 这些知识总觉得如果日常用不到, 就只能留个印象就不错了, 很难记住, 更甭提灵活运用了;
++ 慕课网的`京东首页`还提到了一个工具`browser-sync`;
 
 
 
