复习了一下vuex和vue-router的文档

--- a/_posts/2020-07-25-最近两月学习总结.md
+++ b/_posts/2020-07-25-最近两月学习总结.md
@@ -20,6 +20,7 @@ title: 总结一下这两个月的学习内容
 + 觉得`ssr`真的很难, 还有看文档的时候, 觉得`vue-cli`因为涉及到了较多的`webpack`, 也比较难, 这些都需要去加强学习;
 + 此外, 还有一些零碎的学习, 包括慕课网的`css`相关教程还有自己看的一些`sass`, `typescript`方面的教程. 这些知识总觉得如果日常用不到, 就只能留个印象就不错了, 很难记住, 更甭提灵活运用了;
 + 慕课网的`京东首页`还提到了一个工具`browser-sync`;
++ 下午晚上看了一下`vue-router`以及`vuex`的文档, 真是每看一遍都有新的收获;
 
 
 
